Fix redundant scrollbar on .event-line element in Chrome

--- a/plugins/calendar/skins/larry/calendar.css
+++ b/plugins/calendar/skins/larry/calendar.css
@@ -795,8 +795,7 @@ a.miniColors-trigger {
 }
 
 .calendarmain .eventdialog div.event-line {
-	margin-top: 0.1em;
-	margin-bottom: 0.3em;
+	margin-bottom: 0.4em;
 	white-space: nowrap;
 	overflow-x: hidden;
 	text-overflow: ellipsis;
